fix: navigation alignment fix

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,18 +5,20 @@
 }
 
 nav {
-    text-align: center;
     border-bottom: 0.2vh solid $main;
     margin-top: 2vh;
 
     .nav-links {
         padding: 0;
-        margin: 0;
+        margin: 0 auto;
+        display: flex;
+        width: 40%;
+        align-items: flex-end;
 
         li {
             list-style-type: none;
             display: inline-block;
-            margin: 0 1vh;
+            margin: 0 0.5vh;
 
             a,
             span {
@@ -39,13 +41,7 @@ nav {
             img {
                 width: 36px;
                 height: auto;
-                position: relative;
-                top: 10px;
             }
-        }
-
-        .push {
-            margin-left: 20vh;
         }
     }
 }
